<resources>
    <string name="app_name">ERIC</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="register">REGISTER</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_sign_in">Click to Sign-In</string>
    <string name="hello_user">Hello User!</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo">TODO</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="chat_ai">Chat Generator</string>
    <string name="chat">CHAT Ai</string>
    <string name="create_voice">Ai Voice Generator</string>
    <string name="video">Ai Video Generator</string>
    <string name="account">account</string>
    <string name="message_chat_ai">Message Chat Ai</string>
    <string name="how_can_i_help_you_today">How can I help you today?</string>
    <string name="design_your_image_here">Design Your Image Here</string>
    <string name="design_your_video_here">Design Your Video Here</string>
    <string name="create_your_own_voice">Create Your Own Voice</string>
    <string name="name">Name</string>
    <string name="enter_your_text_here">Enter your Text here.!</string>
    <string name="download">Download</string>
    <string name="ai_image_generator">Ai Image Generator</string>
    <string name="generate">GENERATE</string>
    <string name="chat_ai_generator">Ai Chat Generator</string>
    <string name="image_generator">Image Generator</string>
    <string name="voice_generator">Voice Generator</string>
    <string name="video_generator">Video Generator</string>
    <string name="_0_00">0:00</string>
    <string name="e_r_i_c">E.R.I.C</string>
    <string name="user_info">User Info</string>
    <string name="profile">Profile</string>
    <string name="username">UserName</string>
    <string name="phone_no">Phone No.</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
</resources>