<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".LoginPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:alpha="0.3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/secrets_stencil"
                android:text="E.R.I.C"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:textSize="75sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/second"
                    android:text="@string/login"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Please Login into account"
                    android:alpha="0.7"
                    android:textColor="#302F2F"
                    android:layout_marginBottom="10dp"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_id"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:drawableEnd="@drawable/done_icon"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#201E1E"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Remember Me"
                        android:layout_centerVertical="true"
                        android:alpha="0.7"
                        android:textColor="#3A3838"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/forgot_password"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/second"
                        android:paddingTop="13dp"
                        android:id="@+id/forgot"
                        android:alpha="0.8"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/log_in"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Or"
                    android:textColor="#3A3838"
                    android:layout_marginTop="10dp"
                    android:alpha="0.7"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/signInNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/click_to_sign_in"
                    android:textColor="@color/second"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>