<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@color/dark_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/secrets_stencil"
            android:text="E.R.I.C"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="75sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"
                android:textColor="@color/second"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please change your password"
                android:textColor="#3A3838"
                android:alpha="0.7"
                android:layout_marginBottom="20dp"
                tools:ignore="HardcodedText" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/email_id"
                    android:textColor="@color/black"
                    android:textColorHint="#3A3838"
                    android:drawableEnd="@drawable/done_icon"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_marginTop="40dp"
                android:visibility="gone"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/submit" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>